# Password-Manager

./: .gitignore  .gitmodules  Password Manager.sln  README.md
Password Manager/: CMakeCache.txt  CMakeLists.txt  Makefile  Password Manager.cpp  Password Manager.vcxproj  Password Manager.vcxproj.filters  SHA256.cpp  User.h  cmake_install.cmake  config.json  crypto_gcm.cpp  crypto_gcm.h  db_crypto.cpp  db_crypto.h  passwords.pmdb
Password Manager/OLD/: Password Manager.cpp  SHA256.cpp  crypto_kdf.cpp
Password Manager/build-win/: .ninja_deps  .ninja_log  build.ninja
Password Manager/src/: cli.cpp  config.cpp  config.h  database.cpp  database.h  entry.h  kdf_benchmark.cpp  kdf_benchmark.h  password_generator.cpp  password_generator.h
